@@ -2,6 +2,9 @@
 fixtures:
   repositories:
     auditd:               "https://github.com/simp/pupmod-simp-auditd"
+    augeas_core:
+      repo: https://github.com/simp/pupmod-puppetlabs-augeas_core.git
+      puppet_version: ">= 6.0.0"
     augeasproviders_core: "https://github.com/simp/augeasproviders_core"
     augeasproviders_grub: "https://github.com/simp/augeasproviders_grub"
     concat:               "https://github.com/simp/puppetlabs-concat"
@@ -13,7 +16,6 @@ fixtures:
     pki:                  "https://github.com/simp/pupmod-simp-pki"
     polkit:               "https://github.com/simp/pupmod-simp-polkit"
     rsyslog:              "https://github.com/simp/pupmod-simp-rsyslog"
-    simpcat:              "https://github.com/simp/pupmod-simp-simpcat"
     simplib:              "https://github.com/simp/pupmod-simp-simplib"
     stdlib:               "https://github.com/simp/puppetlabs-stdlib"
   symlinks:
